Closed Bug 1643087 Opened 4 years ago Closed 4 years ago

ThreadSanitizer: lock-order-inversion (potential deadlock) [@ PR_Lock] in BadCertAndPinningServer

Categories

(Core :: Security: PSM, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: kjacobs, Assigned: kjacobs)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Bug 1614605 whitelisted a TSAN false positive in SanctionsTestServer and OCSPStaplingServer (more specifically, in the TLSServer library that they both use).

The latest NSS uplift [1] is somehow causing this false positive to show up via BadCertAndPinningServer (which also uses this library). The same thing happens locally, though only with a brand new cert9.db. If the test is repeated, TSAN no longer detects it and the test completes successfully.

Extending the same suppression fixes the issue [2].

[1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=7454be159a07c6a52c3a15bc79e66a035525606c&selectedTaskRun=LBp6I_hfRgOlzNh4CPDajg-0
[2] https://treeherder.mozilla.org/#/jobs?repo=try&revision=2028ae770332c58c236c768fd04c32295a8bdfa7

Blocks: 1642687
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d90b13b1635f
Extend TSAN false-positive suppression to BadCertAndPinningServer. r=keeler
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Blocks: tsan
Blocks: 1680655
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: