Bug 1643087 - Extend TSAN false-positive suppression to BadCertAndPinningServer. r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D78116